--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.8",
     "express": "^4.21.1",
     "openmeteo": "^1.1.4",
     "puppeteer-core": "^23.9.0"
